kubernetes/apps/longhorn-system/longhorn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Longhorn"
    gethomepage.dev/description: "Distributed block storage"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "longhorn.svg"
spec:
  hostnames:
    - "longhorn.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
